--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     }
     .container {
       position: relative;
-      width: 390px;
+      width: 100%;
+      max-width: 1080px;
     }
     .container img {
       width: 100%;
@@ -33,10 +34,10 @@
       left: 10%;
     }
     .catalogo {
-      top: 52.5%;
+      top: 58%;
     }
     .whatsapp {
-      top: 64.5%;
+      top: 70%;
     }
   </style>
 </head>
@@ -44,7 +45,7 @@
 
   <div class="container">
     <img src="arte-terapia.jpg" alt="Arte Terapia">
-    
+
     <a href="https://drive.google.com/file/d/1pNxuMUgR82oGcCRIdIcdxfYtrSIW1p68/view?usp=drivesdk" 
        target="_blank" class="button catalogo" title="Ver Catálogo"></a>
 
